--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
 		<link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
-        
+        <div id="container">
+            <header>
+                <h2>The night <em>he</em> came home!</h2>
+            </header>
+            <main>
+                <section id="dif">
+                    <h3>John Carpenter's</h3>
+                    <h1>Halloween</h1>
+                    <p>The trick is to stay alive.</p>
+                </section>
+                <section>
+                    <p>Mousetapha Akkad presents Donald Pleasence in John Carpenter's "Halloween"</p>
+                    <p>With Jamie Lee Curtis, P.I Soles, Nancy Loomis  Written By John Carpenter And Debra Hill Executive</p>
+                    <p>Producer Irwin Yablans  Music by John Carpenter Directed by John Carpenter Produced by Debra Hill</p>
+                </section>
+            </main>
+            <footer>
+                <section id="dif">
+                    <p>Poster Design by Casey Booth</p>
+                    <h2>CB | 1086 Studios</h2>
+                </section>
+                <section>
+                    <p><strong>Panavision</strong> Technicolor</p>
+                </section>
+                <section>
+                    <p>A Compass International release</p>
+                    <h2>1978</h2>
+                    <h2 id="i"><small>(</small>i<small>)</small></h2>
+                    <p><em>Horror</em></p>
+                </section>
+                <section>
+                    <h4>Restricted</h4>
+                    <p><img src="images/restricted-logo.svg" alt="Restricted Logo" height="77" width="291"></p>
+                    <h2><small>103178</small></h2>
+                </section>
+                <section id="bottom">
+                    <h3>Halloween</h3>
+                    <p>Printed in the U.S.A.</p>
+                </section>
+            </footer>
+        </div>
     </body>
 </html>
