changed header from em to strong, started styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="container">
             <header>
-                <h2>The night <em>he</em> came home!</h2>
+                <h2>The night <strong>he</strong> came home!</h2>
             </header>
             <main>
                 <section id="dif">
