image is DONE, finally

--- a/index.html
+++ b/index.html
@@ -24,37 +24,42 @@
                     <p>With Jamie Lee Curtis, P.I Soles, Nancy Loomis  Written By John Carpenter And Debra Hill Executive</p>
                     <p>Producer Irwin Yablans  Music by John Carpenter Directed by John Carpenter Produced by Debra Hill</p>
                 </section>
+                <section>
+                    <ul>
+                        <li>
+                            <ul id="stack">
+                                <li>Poster Design by Casey Booth</li>
+                                <li id="bigger"><strong>CB | 1086 Studios</strong></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p><strong>Panavision</strong> Technicolor</p>
+                        </li>
+                        <li>
+                            <ul>
+                                <li>A Compass International release</li>
+                                <li id="year">1978</li>
+                                <li id="i"><small>(</small>i<small>)</small></li>
+                                <li><em>Horror</em></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul>
+                                <li id="black">Restricted</li>
+                                <li id="down"><small>103178</small></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+                <section id="bottom">
+                    <ul>
+                        <li><strong>Halloween</strong></li>
+                        <li>Printed in the U.S.A.</li>
+                    </ul>
+                </section>
             </main>
             <footer>
-                <ul>
-                    <li>
-                        <ul>
-                            <li>Poster Design by Casey Booth</li>
-                            <li><strong>CB | 1086 Studios</strong></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <p><strong>Panavision</strong> Technicolor</p>
-                    </li>
-                    <li>
-                        <ul>
-                            <li>A Compass International release</li>
-                            <li>1978</h2>
-                            <li id="i"><small>(</small>i<small>)</small></li>
-                            <li><em>Horror</em></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul>
-                            <li>Restricted</li>
-                            <li><small>103178</small></li>
-                        </ul>
-                    </li>
-                </ul>
-                <section id="bottom">
-                    <h3>Halloween</h3>
-                    <p>Printed in the U.S.A.</p>
-                </section>
+                
             </footer>
         <p><img src="images/restricted-logo.svg" alt="Restricted Logo" height="77" width="291"></p>
         </div>
