added some anchors. site should be good now

--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
                     </ul>
                 </section>
             </main>
-            <footer>
-                
-            </footer>
         <p><img src="images/restricted-logo.svg" alt="Restricted Logo" height="77" width="291"></p>
         </div>
+        <footer>
+            <h3>Film not intended for a younger audience</h3>
+            <p><a href="https://theofficialjohncarpenter.com/" title="johncarpenter.com">John Carpenter's Website</a></p>
+            <p><a href="https://www.imdb.com/title/tt0077651/" title="imdb.com">IMDb Page for Halloween (1978)</a></p>
+            <p>97% on <a href="https://www.rottentomatoes.com/m/1009113-halloween" title="rottentomatoes.com">Rotten Tomatoes</a></p>
+        </footer>
     </body>
 </html>
